UI+Fix: timeCursor z-index:1

--- a/css/grid.scss
+++ b/css/grid.scss
@@ -100,6 +100,7 @@
 
 	.timeCursor {
 		position: absolute;
+		z-index: 1;
 		height: 100%;
 		width: 1px;
 		margin-left: -1px;
